fixed the css mis-alignment on the shipments table

--- a/frontend/src/components/shipments/shipment.css
+++ b/frontend/src/components/shipments/shipment.css
@@ -110,7 +110,7 @@
 
 
 #not-delivered{
-    width: 13%;
+    width: 13.01%;
     height: 40px;
     text-align: center;
     font-size: medium;
@@ -154,8 +154,10 @@ option{
     justify-content: flex-start;
     width: 100%;
     padding: 0px;
-    gap: 3px;
-    padding-bottom: 5px;
+    grid-gap: 3px;
+    gap: 2px;
+    padding-bottom: 3px;
+    margin-left: 2px;
 }
 
 #not-delivered-info-container{
@@ -183,9 +185,12 @@ option{
 #table-columns{
     display: flex;
     gap: 5px;
-    margin-left: 1px;
 }
 
+#table-columns-order{
+    display: flex;
+    gap: 5px;
+}
 #table-columns1{
     display: flex;
     grid-gap: 5px;
@@ -193,17 +198,12 @@ option{
     margin-left: 3px;
 }
 
-#table-columns-order{
-    display: flex;
-    gap: 5px;
-}
-
 #p{
     font-weight: bold;
     text-size-adjust: 100px;
     font-size: 25px;
     border: solid;
-    width: 13%;
+    width: 12%;
     text-align: center;
 }
 #p2{
@@ -219,7 +219,7 @@ option{
     font-size: 25px;
     border: solid;
     /* width: 226px; */
-    width: 11.7%;
+    width: 13%;
     text-align: center;
 }
 
